<resources>
    <string name="app_name">SpaceBinge</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="search">Search</string>
    <string name="downloaded">Downloaded</string>
    <string name="news">News</string>
    <string name="news_nav_menu">Latest @NASA</string>
    <string name="credits_nav_menu">Credits</string>
    <string name="profile">Profile</string>
    <string name="credits">Credits</string>
    <string name="see_all_text">See All</string>
    <string name="video_dwn_cont_desc">Video Download Button</string>
    <string name="video_watchlist_cont_desc">Video Watchlist Button</string>
    <string name="search_box_hint">Search here</string>
    <string name="search_result_image_view_cd">Search Result Image View</string>
    <string name="search_result_title">{search_result_title}</string>
    <string name="watch_list_title">{watch_list_title}</string>
    <string name="thumbnail_imageview">thumbnail imageview</string>
    <string name="loading_indicator_cd">Loading Indicator ImageView</string>
    <string name="video_item_card_content_description">video_item_card_cd</string>
    <string name="no_data_image_cd">No Data Image</string>
    <string name="no_data_tv_text_watchlist">No Videos in your Watchlist</string>
    <string name="no_data_tv_text_downloadlist">No Videos in your Download List</string>
    <string name="app_icon_cd">all screen app icon</string>
    <string name="some_error_occurred">Error Occurred during Download</string>
    <string name="news_api_key">09bfb86a3c3145308ce44763b0677b51</string>
    <string name="default_news_query">nasa</string>
    <string name="all_caught_up_text">All Caught Up</string>
    <string name="watch_more_text">Watch more Space Videos</string>
    <string name="all_caught_up_cd">All Caught Up</string>
    <string name="news_item_image_cd">News Item Image</string>
    <string name="offline_iv_cd">Offline mode image view Content Description</string>
    <string name="offline_mode_tv">Please Check \n your Internet Connection</string>
    <string name="watch_offline_videos_tv">Watch Your Offline Videos</string>
    <string name="create_account_tv_text">Create Account</string>
    <string name="sign_up_email_edittext_hint">Email</string>
    <string name="sign_up_p_edittext_hint">Password</string>
    <string name="sign_up_c_p_edittext_hint">Confirm Password</string>
    <string name="sign_up_button_text">SIGN UP ></string>
    <string name="navigation_drawer_header_image_cd">navigation drawer header image</string>
    <string name="navigation_drawer_button_image_cd">Navigation Drawer Button Image</string>
    <string name="credits_image_cd">credits image</string>
    <string name="credit_text">This app is completely free. No Subscription required.All the videos, images and description contents in the app has been created by NASA.\n\nThe developers of this app have made an effort to bring you all this content from NASA  in a more user-friendly and handy manner.\n\nStream latest videos on latest happenings on NASA with Space Binge\n</string>
    <string name="email_address_tv_text">Email Address</string>
    <string name="sign_out_btn_text">Sign Out</string>
    <string name="user_name_tv_text">User Name</string>
    <string name="fullscreen_button_cd">FullScreen Button</string>
    <string name="splash_background_cd">Splash Background</string>
    <string name="splash_loading_indicator_cd">Splash Screen Loading Indicator</string>
    <string name="empty_view_text">Loading Latest News....</string>
    <string name="space_binge_widget_title_tv">SPACE BINGE NEWS</string>
    <string name="offline_refresh_btn_text">refresh</string>
    <string name="app_title_image_cd">Homepage App Title Content description</string>
    <string name="exoplayer_fullscreen_button_cd">Exoplayer Fullscreen Button</string>
    <string name="exoplayer_rewind_cd">Exoplayer Rewind Button</string>
    <string name="exoplayer_play_cd">Exoplayer Play Button</string>
    <string name="exoplayer_pause_cd">Exoplayer Pause Button</string>
    <string name="exoplayer_fast_fwd_cd">Exoplayer Fast Forward Button</string>

    <string-array name="topics">
        <item>Latest</item>
        <item>Aliens</item>
        <item>Earth</item>
        <item>Black Holes</item>
        <item>Outer Space</item>
        <item>Mars</item>
        <item>Planets</item>
        <item>Asteroids</item>
        <item>Constellation</item>
    </string-array>
</resources>
