<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/watchlist"
        android:enabled="true"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/watchlist"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item
        android:id="@+id/downloaded"
        android:enabled="true"
        android:icon="@drawable/ic_downloaded"
        android:title="@string/downloaded"/>

    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news"/>
</menu>
