<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/offline_mode_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/offline_iv_cd"
        android:src="@drawable/ic_offline"
        android:visibility="gone" />

    <TextView
        android:id="@+id/offline_mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/offline_mode_iv"
        android:layout_centerHorizontal="true"
        android:text="@string/offline_mode_tv"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_font_size"
        android:visibility="gone" />

    <TextView
        android:id="@+id/go_to_downloads_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/offline_mode_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/loading_indicator_dimen"
        android:text="@string/watch_offline_videos_tv"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/heading_6"
        android:visibility="gone" />

    <Button
        android:id="@+id/offline_refresh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_to_downloads_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenties_dim"
        android:background="@color/colorPrimary"
        android:text="@string/offline_refresh_btn_text"
        android:visibility="gone" />
</RelativeLayout>