<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.SubscriptionLoginActivity">

    <ImageView
        android:id="@+id/search_app_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_icon_cd"
        android:src="@drawable/spacebinge_icon" />

    <TextView
        android:id="@+id/account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_app_icon"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_account_tv_text"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_tv"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="a@bf.c"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/sign_up_email_edittext_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/sign_up_p_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_email_edittext"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/sign_up_p_edittext_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/sign_up_c_p_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_p_edittext"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/sign_up_c_p_edittext_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_c_p_edittext"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up_button_text"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_bar_navigation"
            style="@style/BottomNavTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottombar_bg"
            app:itemTextColor="@android:color/white"
            app:menu="@menu/bottom_navigation_menu" />

    </RelativeLayout>
</RelativeLayout>