<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.NewsActivity">

    <ImageView
        android:id="@+id/download_app_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:contentDescription="@string/app_icon_cd"
        android:src="@drawable/spacebinge_icon" />

    <ImageView
        android:id="@+id/loading_indicator_news_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/loading_indicator_cd"
        android:src="@drawable/globe_loading"
        android:visibility="gone" />

    <include layout="@layout/offline_layout" />

    <ImageView
        android:id="@+id/all_caught_up_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/all_caught_up_cd"
        android:src="@drawable/ic_all_caught_up"
        android:visibility="gone" />

    <TextView
        android:id="@+id/all_caught_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_caught_up_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/all_caught_up_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:visibility="gone"
        tools:text="All Caught Up" />

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/download_app_icon"
        android:clipToPadding="false"
        android:padding="8dp" />

    <TextView
        android:id="@+id/watch_more_videos_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_caught_up_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/watch_more_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:visibility="gone"
        tools:text="Watch More Space Videos" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_bar_navigation"
            style="@style/BottomNavTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottombar_bg"
            app:itemHorizontalTranslationEnabled="true"
            app:itemTextColor="@android:color/white"
            app:labelVisibilityMode="selected"
            app:menu="@menu/bottom_navigation_menu" />

    </RelativeLayout>
</RelativeLayout>